# clipper-native

./: CMakeLists.txt  README  build.gradle.kts  settings.gradle.kts
src/main/cpp/: clipper.cpp  com_angusj_clipper_Clipper.cpp  com_angusj_clipper_Clipper.h
src/main/java/com/angusj/clipper/: Clipper.java  NativeUtils.java
