cmake_minimum_required(VERSION 2.8)
project(clipper-native)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_MACOSX_RPATH 1)


set(JAVA_AWT_LIBRARY NotNeeded)
set(JAVA_JVM_LIBRARY NotNeeded)
set(JAVA_INCLUDE_PATH2 NotNeeded)
set(JAVA_AWT_INCLUDE_PATH NotNeeded)
find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES src/main/cpp/com_angusj_clipper_Clipper.cpp src/main/cpp/clipper.cpp src/main/cpp/clipper_offset.cpp)
add_library(clipper-native SHARED ${SOURCE_FILES})
